--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="cancel">Cancel</string>
     <string name="sign_up">Sign Up</string>
     <string name="submit">submit</string>
+    <string name="play_game" />
 
 </resources>
