--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,10 @@
     <string name="cancel">Cancel</string>
     <string name="sign_up">Sign Up</string>
     <string name="submit">submit</string>
+    <string name="edit_pet_settings">Edit Pet Settings</string>
+    <string name="enter_pet_name">Enter Pet Name</string>
+    <string name="enter_pet_type">Enter Pet Type</string>
+    <string name="enter_pet_color">Enter Pet Color</string>
+    <string name="save_settings">Save Settings</string>
 
 </resources>
