added SettingsActivity and activity_settings.xml, finished activity_settings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="enter_pet_type">Enter Pet Type</string>
     <string name="enter_pet_color">Enter Pet Color</string>
     <string name="save_settings">Save Settings</string>
+    <string name="play_game">Play game</string>
 
 </resources>
