fixed color of pet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="red">Red</string>
 
     <string name="admin_panel">Admin Panel</string>
+    <string name="reset">Reset</string>
+    <string name="clear">Clear</string>
 
 
 </resources>
