fixed color of pet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,14 @@
     <string name="red">Red</string>
 
     <string name="admin_panel">Admin Panel</string>
+
     <string name="reset">Reset</string>
     <string name="clear">Clear</string>
+
+    <string name="add_pet">Add Pet</string>
+    <string name="pet_name">Pet Name</string>
+    <string name="pet_species">Pet Species</string>
+    <string name="add_pet_">add Pet</string>
 
 
 </resources>
