IT WORKS FINALLY IT WORKS IT WORKS IT WORKS IT WORKS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,14 +21,15 @@
     <string name="red">Red</string>
 
     <string name="admin_panel">Admin Panel</string>
-
-
+    <string name="add_pet">Add Pet</string>
+    <string name="pet_name">Pet Name</string>
+    <string name="pet_species">Pet Species</string>
+    <string name="add_pet_">add Pet</string>
 
     <string name="reset">Reset</string>
     <string name="clear">Clear</string>
-    <string name="pet_name">Pet Name</string>
-    <string name="pet_species">Species</string>
-    <string name="add_pet">Add Pet</string>
+    <string name="food_10">Food: 10</string>
+    <string name="pet">Pet</string>
 
 </resources>
 
